# ptah-roadmap-

./: AI_HANDOFF.md  AI_START_HERE.md  CURRENT_STATE.md  DECISIONS.md  DONOR_RECOVERY.md  IMPLEMENTATION_ROADMAP.md  MASTER_PLAN.md  MASTER_ROADMAP.md  MEMORY_PROTOCOL.md  PROGRESS.md  README.md  REQUIREMENT_CLOSURE_MATRIX.md  WORK_ITEM_TEMPLATE.md  master-plan-index.json
archive/: ARCHIVE-RECORD-TEMPLATE.md  CAMPAIGN-001-FORMATION-MANIFEST.md
conformance/: PHASE-0B-WP01-COMMON-CONTRACT-SAFETY-NET.md  PHASE-0B-WP02-ACTIVITY-EVENT-RECEIPT-SAFETY-NET.md  PHASE-0B-WP03-OBJECT-ARTIFACT-STORAGE-SAFETY-NET.md  PHASE-0B-WP04-NODE-FACILITY-PROVIDER-SAFETY-NET.md  PHASE-0B-WP04-NODE-FACILITY-PROVIDER-SAFETY-NET.v0.1.1.md  PHASE-0B-WP05-WORKSPACE-SESSION-CHECKPOINT-RECOVERY-SAFETY-NET.md  PHASE-0B-WP06-TRANSFER-SYNC-CONFLICT-BACKUP-SAFETY-NET.md  PHASE-0B-WP07-BUILD-PROVENANCE-SAFETY-NET.md  PHASE-0B-WP08-DOMAIN-FIRMWARE-DISK-DEVICE-SAFETY-NET.md  PHASE-0B-WP08-DOMAIN-FIRMWARE-DISK-DEVICE-SAFETY-NET.v0.1.1.md
conformance/harness/: ptah_conformance.py  ptah_conformance_compat.py  ptah_conformance_compat2.py  pyproject.toml  semantic_fixture_runner.py  semantic_rules.py  test_ptah_conformance.py
contracts/: PHASE-0B-COMMON-CONTRACT-CONVENTIONS.md  PHASE-0B-ENTITY-KIND-REGISTRY.md  PHASE-0B-IDENTITY-KIND-REGISTRY.md  PHASE-0B-WP02-ACTIVITY-EVENT-PROOF-CONVENTIONS.md  PHASE-0B-WP02-ENTITY-KIND-SUPPLEMENT.md  PHASE-0B-WP02-PROOF-LEVEL-REGISTRY.md  PHASE-0B-WP03-ENTITY-KIND-SUPPLEMENT.md  PHASE-0B-WP03-OBJECT-STORAGE-CONVENTIONS.md  PHASE-0B-WP03-RELATIONSHIP-TYPE-REGISTRY.md  (+10 more)
(+1060 files in other folders)
